--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -83,10 +83,13 @@
                             android:layout_height="40dp"
                             android:layout_weight="1"
                             android:inputType="date"
-                            android:paddingStart="10dp"
+                            android:paddingHorizontal="10dp"
                             android:textSize="24sp"
+                            android:textColor="@color/blue_400"
                             android:hint="@string/dashboard_search_time_date_edittext"
-                            android:background="@drawable/bg_edit_text_date" />
+                            android:textColorHint="@color/grey_300"
+                            android:maxLength="8"
+                            android:background="@drawable/bg_edit_text_date"/>
 
                         <ImageButton android:id="@+id/dashboard_search_time_date_button"
                             android:layout_width="40dp"
