--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -95,7 +95,6 @@
         <item name="android:spinnerStyle">@style/spinnerStyleClickable</item>
         <item name="android:spinnerItemStyle">@style/SpinnerItem</item>
         <item name="android:spinnerDropDownItemStyle">@style/SpinnerDropDownItem</item>
-        <item name="android:background">@drawable/bg_spinner</item>
     </style>
     <style name="spinnerStyleClickable">
         <item name="android:clickable">true</item>
@@ -111,8 +110,10 @@
     <style name="spinnerStyle" parent="Widget.AppCompat.Spinner">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">40dp</item>
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:paddingRight">10dp</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:background">@drawable/bg_edit_text_border</item>
+        <item name="android:background">@drawable/bg_spinner</item>
     </style>
 
     <!-- row text -->
